--- a/lookup/templates/base.html
+++ b/lookup/templates/base.html
@@ -13,6 +13,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+
+    <!-- Instead of using a style.css file (that would be the "right" thing to do), we define the colours here to use in the home.html -->
+    <!-- Remember home.html extends the base.html file -->
+    <style>
+      .good {background-color: #0C0;}
+      .moderate {background-color: #FFFF00;}
+      .unhealthyforsensitivegroups {background-color: #FF9900;}
+      .unhealthy {background-color: #FF0000;}
+      .veryunhealthy {background-color: #990066;}
+      .hazardous {background-color: #660000;}
+    </style>
+
   </head>
   <body>
 
@@ -30,10 +42,14 @@
                 <a class="nav-link" href="{% url 'about' %}">About Me</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-secondary" type="submit">Search</button>
+
+            <form action="{% url 'home' %}" class="d-flex"
+            method="POST">
+                {% csrf_token %} <!-- Needed to avoid form hacking -->
+              <input class="form-control me-2" type="search" placeholder="Enter ZIP code" aria-label="Search" name="zipcode">
+              <button class="btn btn-outline-secondary" type="submit">Lookup</button>
             </form>
+          
           </div>
         </div>
       </nav>
