--- a/lookup/templates/home.html
+++ b/lookup/templates/home.html
@@ -1,20 +1,33 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
 
-<h1>Hello World!</h1>
 <br/>
-<!--- call the context variable 'api' -->
 
+{% if zipcode %}
+    {{ zipcode }}
+{% endif %}
+
+<!--- use the context variable 'api' defined in views.py file -->
 {% if api %}        
     {% if api == "Error..." %}
         There was an error in the API request, please try again.
     {% else %}
+        <div class="p-5 mb-4 bg-light rounded-3">
+            <div class="container-fluid py-5 {{ category_color }}">
+            <h1 class="display-5 fw-bold">{{ api.0.Category.Name }}<br/></h1>
+            <p class="col-md-8 fs-4">Current {{ api.0.ReportingArea }} 
+                Air Quality: {{ api.0.AQI }} </p>
+            
+                <p>{{ category_description }}</p>
+
+            <!--- <button class="btn btn-primary btn-lg" type="button">Example button</button> -->
+            <a class="btn btn-primary" href="{{ full_info_url }}" target="_blank" role="button">Check full weather report</a>
+            </div>
+        </div>
+
         <br/> {{ api.0 }} <br/><br/>
-        Air Quality: {{ api.0.AQI }} <br/>
-        Area: {{ api.0.ReportingArea }} <br/>
-        Category: {{ api.0.Category.Name }} <br/>
+        
     {% endif %}
 {% endif %}
  
