--- a/lookup/templates/base.html
+++ b/lookup/templates/base.html
@@ -1,3 +1,7 @@
+<!-- Author: nicolas.diez.risueno@gmail.com -->
+<!-- Project: Weather Lookup App (w/ Django) -->
+
+
 <!-- This base.html page is inherited by the rest of .html pages -->
 
 <!--- Using BootStrap framework sample:  https://getbootstrap.com/docs/5.1/getting-started/introduction/ -->
